# mcp-context-server

./: .env.example  .gitignore  LICENSE  README.md  mcp-config-for-vscode.json  pyproject.toml  test_connectivity.py
.github/: AGENTS.md  copilot-instructions.md
.github/skills/git-operations/: SKILL.md
.github/skills/java-refactoring/: SKILL.md
.github/skills/jira-confluence/: SKILL.md
.github/skills/knowledge-base/: SKILL.md
.github/skills/session-context/: SKILL.md
.mcp-context-server/sessions/: 145646203c574b32.json  15c46f32e8c84851.json  161b48d240384d79.json  20e0b9eef8614ebe.json  2686c49ecbb241e3.json  2942d2cbf12d428b.json  2babd71b97554f30.json  2bea35254e994a97.json  3128637d7c48472d.json  3326580fc5a8478f.json  461148258696485b.json  53e25b337b104e12.json  54e1c00694b346f1.json  65cf629114ec4ee4.json  6790c561ea174275.json  6c7afc34f0614a6f.json  6fd63aa02b1c4a75.json  81c0140309104de8.json  88b0519137b1480d.json  8b9270ad36104dbf.json  9d0caeabd6394be2.json  9f8e4e3590724043.json  a4b7b8113aee41e8.json  ad378beb151a432f.json  c6ed69b1e0a74b35.json  d507ebd2c7f7477f.json  d5e3648bf3f74e12.json  dbdbd4a24ab54c33.json  dbec823aae1d4a07.json  e43f49ac4e1340a7.json  e526ff4ca5174854.json  e937e0e741bc46fa.json  ea7b7b0f4ead409c.json  ebfc374302e847a1.json  f09e1c29fb4245c5.json  f1dab5ee8ddd4a3c.json
docs/: agentic-ai-adoption-blueprint.md  git-files-guide.md
mcp_context_server/: __init__.py  config.py  confluence_client.py  git_service.py  jira_client.py  knowledge_base.py  main.py  sessions.py
tests/: test_knowledge_base.py  test_sessions.py
